# sold

./: .gitattributes  .gitignore  README.md  pyproject.toml
apptainer/: environment.yml  multi_object_fetch.def
checkpoints/sold/reach_red/: latest.ckpt  tfevents.0
configs/: config.yaml  evaluate_sold.yaml  generate_dataset.yaml  savi.yaml  sold.yaml  train_autoencoder.yaml  train_savi.yaml  train_sold.yaml
configs/autoencoder/: cnn.yaml  savi.yaml
configs/callbacks/: autoencoder.yaml  default.yaml  sold.yaml
configs/dataset/: image_folder.yaml
configs/experiment/: default.yaml
configs/hydra/: default.yaml
configs/local/: default.yaml
configs/logger/: tensorboard.yaml
configs/savi/: config.yaml  default.yaml
configs/trainer/: default.yaml  gradient_clipping.yaml  online.yaml  sold.yaml
docker/: Dockerfile  conda_env.yml
sold/: eval_sold.py  evaluate_sold.py  generate_dataset.py  slurm.sh  train_autoencoder.py  train_savi.py  train_sold.py
sold/configs/: eval_sold.yaml  train_savi.yaml  train_sold.yaml
sold/configs/callbacks/: savi.yaml  sold.yaml
sold/configs/hydra/: default.yaml
sold/datasets/: image.py  image_folder.py  info.py  ring_buffer.py  utils.py
sold/envs/: __init__.py  from_dmcontrol.py  from_gym.py  from_mof.py  from_survival.py
sold/modeling/: attention_mask.py  distributions.py  positional_encoding.py
sold/utils/: instantiate.py  logging.py  module.py  training.py  visualization.py  visualizations.py
src/sold/: __init__.py  eval_sold.py  train_savi.py  train_sold.py
training/: train_savi.py  train_sold.py
(+128 files in other folders)
