[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sold"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "av",
    "hydra-core",
    "lightning",
    "lightning-bolts",
    "matplotlib",
    "moviepy < 2",
    "multi-object-fetch @ git+https://github.com/maltemosbach/multi-object-fetch",
    "tensorboardx",
    "torch",
]
